<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_amigo_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amigosphire_poc.demo.activities.AmigoFirstActivity">

    <TextView
        android:text="@string/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@color/colorPrimary"
        android:paddingBottom="50dp"
        android:textSize="@dimen/appname_textsize"
        android:id="@+id/textView"/>

    <Button
        android:text="@string/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:textSize="@dimen/signup_textsize"
        android:id="@+id/signinbutton"
        android:visibility="gone"/>

    <Button
        android:text="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:id="@+id/signupbutton"
        android:background="@color/colorPrimary"
        android:textSize="@dimen/signup_textsize"
        android:layout_above="@+id/signinbutton"
        android:layout_alignParentStart="true"
        android:visibility="gone"/>


</RelativeLayout>
